<resources>
    <string name="app_name">ClaseMVP</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="lbl_contrasena">Contraseña</string>
    <string name="lbl_ingresar">Ingresar</string>
    <string name="lbl_registrar">Registrarse</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_apellido">Apellido</string>
    <string name="lbl_rep_contrasena">Repetir Contraseña</string>
</resources>
